# try-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
